<resources>
    <string name="app_name">DoITnow</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">TODOs</string>
    <string name="second_fragment_label">Add new todo</string>
    <string name="no_todos">You don\'t have any todos</string>
    <string name="addtodoaction">addTODO</string>
    <string name="submit">Submit</string>
    <string name="short_description">Short description</string>
    <string name="location">Location</string>
    <string name="title">Title</string>
    <string name="description">description</string>
    <string name="done">Done</string>
    <string name="logo">logo</string>
    <string name="provider_failed">Failed to found location</string>
    <string name="your_location">you</string>
    <string name="nearby_places">Nearby Places</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="title_activity_maps">Map</string>
    <string name="todo_item_details">TodoDetails</string>
    <string name="update">Update</string>
</resources>